<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

  <LinearLayout android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView android:layout_height="wrap_content"
        android:text="@string/client" android:layout_width="50dip"/>
    <EditText android:id="@+id/client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
  </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_width="50dip"/>
        <EditText android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:layout_gravity="center_vertical"
            android:layout_width="50dip"/>
        <ImageView android:id="@+id/photo"
            android:src="@drawable/sheep"
            android:layout_width="60dip"
            android:layout_height="60dip"/>
        <View android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"/>
        <Button android:id="@+id/take_photo"
            android:text="@string/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes" />
    <EditText android:id="@+id/notes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <Button android:id="@+id/save_client_changes"
        android:text="@string/save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>